<resources>
    <string name="app_name">LiveSync</string>
    <string name="videoOffset">Offset (s)</string>
    <string name="videoPlay">Play</string>
    <string name="videoSync">As follower</string>
    <string name="videoStatistics">Statistics</string>
    <string name="statisticsLatency">Audio latency (ms):</string>
    <string name="statisticsTDoA">TDoA (ms):</string>
    <string name="zero">0</string>
    <string name="videoOffsetHint">seconds</string>
    <string name="VideoSettings">Settings</string>
    <string name="videoStop">Stop</string>
    <string name="videoResume">Resume</string>
    <string name="syncRange" >Range (s)</string>
    <string name="statisticsPropDelay">PropDelay (ms):</string>
    <string name="videoLeading">As leader</string>
</resources>
